--- a/2ndpraject3/client/src/pages/index.css
+++ b/2ndpraject3/client/src/pages/index.css
@@ -1,5 +1,14 @@
 body {
-    background-color: ;
+    background-color: whitesmoke;
+}
+
+#wholeRentalSearch {
+    margin: auto;
+    width: 99%;
+    border-style: solid;
+    border-width: 1px;
+    border-color: black;
+    background-color: #F96302;
 }
 
 #Toolbar {
@@ -23,6 +32,20 @@ body {
 #homeDepotIcon {
     height: 10%;
     width: 10%;
+}
+
+.search {
+    position: relative;
+}
+
+#searchIcon {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+
+#searchField{
+    text-indent: 35px;
 }
 
 #tableHead{
