--- a/2ndpraject3/client/src/pages/index.css
+++ b/2ndpraject3/client/src/pages/index.css
@@ -195,3 +195,37 @@ a{
 #submitButton {
     background-color: #F96302;
 }
+
+  /*--------------------*/
+ /*Welcome Page STYLING*/
+/*--------------------*/
+#welcomeBG {
+    background-color: white;
+    height: 100%;
+    width: 100%;
+ }
+ #welcomeH {
+    align-content: center;
+    margin: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+ 
+    height: 250px;
+    width: 100%;
+ 
+    padding-left:100px;
+    padding-right: 100px;
+ 
+ }
+ #getStart {
+    padding-left: 100px;
+    padding-right: 100px;
+    text-align: center;
+    margin-bottom: 130px;
+    padding: 18px;
+ }
+
+ #getStarted {
+     background-color: #f96302;
+ }
